add MASS and data.table to imports

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -17,5 +17,6 @@ RoxygenNote: 7.1.1
 Suggests: 
     testthat (>= 3.0.0)
 Config/testthat/edition: 3
+Imports: MASS, data.table
 Depends: 
     R (>= 2.10)
