--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -17,6 +17,6 @@ RoxygenNote: 7.1.1
 Suggests: 
     testthat (>= 3.0.0)
 Config/testthat/edition: 3
-Imports: MASS, data.table
+Imports: MASS, data.table, dplyr
 Depends: 
     R (>= 2.10)
