box plot example added to README

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(dentrassi)
 export(golgafrinchans)
 export(h2g2)
 export(humans)
+export(inf_improb_dr)
 export(infinite_improbability_drive)
 export(the_guide)
 export(vogon_poetry)
