--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,9 +3,8 @@
 export(betelgeusians)
 export(dentrassi)
 export(golgafrinchans)
-export(h2g2)
 export(humans)
-export(inf_improb_dr)
+export(iidr)
 export(infinite_improbability_drive)
 export(the_guide)
 export(vogon_poetry)
