--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -17,6 +17,10 @@ RoxygenNote: 7.1.1
 Suggests: 
     testthat (>= 3.0.0)
 Config/testthat/edition: 3
-Imports: MASS, data.table, dplyr
+Imports: 
+    MASS,
+    data.table,
+    dplyr,
+    lubridate
 Depends: 
     R (>= 2.10)
